<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="waudio_app_name" translatable="false">Waudio Music</string>
    <string name="editor_activity_label" translatable="false">Waudio - Audio Editor</string>
    <string name="search_edit_box">Search</string>
    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Waudio requires it to be writable.</string>
    <string name="no_sdcard">Sorry, Waudio can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, Waudio can\'t run while your handset is mounted as a USB device.</string>
    <string name="button_options">Options</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="edit_intent">New Waudio</string>
    <string name="time_seconds">seconds</string>
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="do_nothing_with_ringtone_button">Close</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>
    <string name="start_marker" translatable="false">Start marker</string>
    <string name="end_marker" translatable="false">End marker</string>
    <string name="rewind" translatable="false">Rewind</string>
    <string name="play">Play</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="ffwd" translatable="false">Fast forward</string>
    <string name="zoom_in" translatable="false">Zoom In</string>
    <string name="zoom_out" translatable="false">Zoom Out</string>
    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>
    <string name="ringtone_type_label">Type:</string>
    <string name="type_music">Music</string>
    <string name="ringtone_name_label">Name:</string>
    <string name="artist_name" translatable="false">Waudio</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="info_deleted_waudio">Waudio deleted</string>
    <string name="confirm_delete_waudio">Are you sure?</string>
    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>
    <string name="delete_failed">Unable to delete file</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="bad_extension_error">Sorry, Waudio is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Waudio can\'t edit a file if it doesn\'t have an extension like .mp3 .m4a .aac ,amr or .wav</string>
    <string name="about_title">About Waudio</string>
    <string name="about_text"><![CDATA[Use Waudio to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.\n\nVersion %s\n\nDeveloper: Dominic Mazzoni, Nicolas Faralli\nGraphics: Joseph Wain\nSupport and evangelizing: Eugene Koh\nEnhancements: Dan Klufas\n\nWaudio is free software, distributed under the Apache 2.0 license.  Source code is on github.com/google/Waudio\n]]></string>
    <string name="lblSelectTrack">Select an audio</string>
    <string name="message_permissions">We need some permissions to read your audios</string>
    <string name="list_template_activity_label">Waudio - Styles</string>
    <string name="preview_activity_label">Waudio - Preview</string>
    <string name="hastag" translatable="false">#WaudioMusic</string>
    <string name="update_tracks">Refresh Tracks</string>
    <string name="menu_qualify">Rate Waudio</string>
    <string name="urlPlayStore" translatable="false">https://play.google.com/store/apps/details?id=com.ecanaveras.gde.waudio</string>
    <string name="menu_share">Share Waudio</string>
    <string name="msgShareApp">Have you tried Waudio? The app that lets you share music in Whatsapp status</string>
    <string name="msgShareTo">Share Waudio...</string>
    <string name="msgPinillos" translatable="false">Pinillos - Colombia</string>
    <string name="msgReflection" translatable="false">Algunas cosas solo existen, si un día decides crearlas</string>
    <string name="msgCopyRights2" translatable="false">All rights reserved.</string>
    <string name="lblNext">NEXT</string>
    <string name="lblEnd">END</string>
    <string name="lblStart">START</string>
    <string name="lblDuration">DURATION</string>
    <string name="lblContinue">CONTINUE</string>
    <string name="msgChoose30seg">Select 30 seconds of your song, then touch \'next\'</string>
    <string name="msgRestart">We must start again!</string>
    <string name="msgExit">Press again to exit</string>
    <string name="msgCancelEditor">Press again to cancel</string>
    <string name="msgDeniedPermitions">Permissions denied</string>
    <string name="alert_title_choose_style">Choose another style ...</string>
    <string name="msgWarningStyle">Want to choose another style? Create a new Waudio with the style you choose!</string>
    <string name="alert_ok_choose_style">YES, CHOOSE STYLE</string>
    <string name="msgFinish1">Come back soon, there are many Waudios to create!</string>
    <string name="msgFinish2">Do not forget to share your Waudios!</string>
    <string name="msgFinish3">Qualify me on Google Play - Waudio ;)</string>
    <string name="msgFinish4">Share me with your friends, to make me famous - Waudio ;)</string>
    <string name="msgFinish5">I am Music, music is life - Waudio ;)</string>
    <string name="msgFinish6">Everyone loves your statu with Waudio ;)</string>
    <string name="msgWaudioSuccess">Waudio Success...</string>
    <string name="msgWaudioNoFound">Waudio does not exist ...</string>
    <string name="msgWaudioCreate">Create one, choosing a style</string>
    <string name="msgChooseStyle">CHOOSE A STYLE</string>
    <string name="msgShareWith">Share Waudio with...</string>
    <string name="msgDeleteWaudio">Delete :(</string>
    <string name="msgConfirmDelete">Do you want to delete the Waudio?</string>
    <string name="msgConfirmTemplateDelete">Do you want to delete the Style?</string>
    <string name="msgYesDelete">YES, DELETE</string>
    <string name="alert_cancel">CANCEL</string>
    <string name="msgOpenWith">Open Waudio with...</string>
    <string name="lblShare">SHARE</string>
    <string name="lblGotoEditor">GO TO EDITOR</string>
    <string name="lblDelete">DELETE</string>
    <string name="lblOpenWith">OPEN WITH...</string>
    <string name="lblNewWaudio">NEW WAUDIO</string>
    <string name="lblFinish">FINISH</string>
    <string name="msgStyleChoosed">You already created a Waudio, with this style, you want to see it?</string>
    <string name="alert_ok_preview">PREVIEW</string>
    <string name="title_activity_main" translatable="false">Waudio Music</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="nameFragmentTracks">MUSIC</string>
    <string name="title_fragment_waudios" translatable="false">WAUDIOS</string>
    <string name="title_fragment_styles">STYLES</string>
    <string name="msgChooseAudio">Select an audio track ...</string>
    <string name="tip_pause_music">Tip: To pause, press \'back\'</string>
    <string name="tip_cancel_editor">Tip: To cancel, press \'back\'</string>
    <string name="title_activity_waudio_fullscreen">Waudio Preview</string>
    <string name="formatContextMenuDeleteWaudio">Delete %1$d Waudio(s) selected?</string>
    <string name="formatDeleteWaudio">Do you want to delete the Waudio: %1$s?</string>
    <string name="info_contextmenu_deleted_waudio">%1$d Waudio(s) deleted</string>
    <string name="msgProblemGenerateWaudio">Out, something went wrong, back to the editor and try again!</string>
    <string name="lblCategory">CATEGORY</string>
    <string name="alert_title_permitions">Waudio Permissions</string>
    <string name="alert_continue">CONTINUE</string>
    <string name="msgWaudioGenerating">Generating Waudio ...</string>
    <string name="msgTemplatesLoading">Loading your styles ...</string>
    <string name="msgTracksLoading">Loading Music ...</string>
    <string name="msgAudioLoading">Loading your audio...\nwait me</string>
    <string name="msgAudioLoading2">I\'m almost done...</string>
    <string name="msgWaudioLoading">Loading your Waudios ...</string>
    <string name="menu_action_order_by">Sort by...</string>
    <string name="menu_action_goto_store">Waudio Store</string>
    <string name="formatOrderby">Ordered by: %1$s</string>
    <string name="lblOrderbyDate">Creation date</string>
    <string name="lblOrderbyTitle">Name</string>
    <string name="msgComingSoonStore">Soon you can download many styles!</string>
    <string name="msgErrorDeleteWaudio">Problems deleting waudio, try again</string>
    <string name="app_name" translatable="false">Waudio Music</string>
    <string name="main_activity_label" translatable="false">Waudio Music</string>
    <string name="lblGoHome">GO TO WAUDIOS</string>
    <string name="store_activity_label" translatable="false">Waudio Store</string>
    <string name="msgNoMusic">REALLY DON\'T HAVE MUSIC?</string>
    <string name="msgNoMusic2">IT SEEMS WHAT YOU STAYED\n...IN THE ROCK AGE!</string>
    <string name="msgNoMusic3">Waudio Music, makes his magic only with musica\n the internet is full of it, or ask your friends, and come back!</string>
    <string name="msgDenegateTemplateDelete">My friend, this style is part of my magic, you can not delete it!</string>
    <string name="msgIntroStore">WAUDIO STORE, A WORLD OF STYLES TO CREATE WONDERFUL WAUDIOS ...</string>
    <string name="msgItemsAvailable">NEW STYLES</string>
    <string name="msgRating">You have fun and we love it!!! \nhow many stars would you give</string>
    <string name="alert_ok_new_styles">SHOW ME</string>
    <string name="alert_ok_rating">QUALIFY</string>
    <string name="alert_cancel_rating">LATER</string>
    <string name="msgNewStylesAvailable">NEW STYLES AVAILABLE...</string>
    <string name="msgSelectStyle">Choose a style to continue ...</string>
    <string name="msgSelectStyleTip">you can download them from Waudio Store</string>
    <string name="lblFrom">AN IDEA MADE IN</string>
    <string name="lblForWorld">FOR THE WORLD</string>
    <string name="msgCopyRights" translatable="false">© 2017 - 2020 ecanaveras.</string>
</resources>