<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ListAudioActivity">

    <item
        android:id="@+id/action_search"
        android:checkable="false"
        android:icon="@drawable/ic_search"
        android:title="@string/search_edit_box"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <!--<item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_action_cached"
        android:title="@string/update_tracks"
        app:showAsAction="collapseActionView|withText" />-->

    <item
        android:id="@+id/action_qualify"
        android:icon="@drawable/ic_action_thumb_up"
        android:title="@string/menu_qualify"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/menu_share"
        app:showAsAction="collapseActionView|withText" />

</menu>
