<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgnd_gradient_templates"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--STYLE ON STORE-->
        <LinearLayout
            android:id="@+id/lyContentStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgCard"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/msgNewStylesAvailable"
                android:textAlignment="center"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/lyContentItemStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <!--space item-->

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="2"
                android:text="@string/msgIntroStore"
                android:textColor="@color/playback_indicator"
                android:textSize="10sp"
                android:textAlignment="center"/>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <!--LISTA SD CARD-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgSelectStyle"
            android:textAlignment="center"
            android:maxLines="2"
            android:textSize="12sp"
            android:textAllCaps="true"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgSelectStyleTip"
            android:textAlignment="center"
            android:maxLines="2"
            android:textSize="10sp"
            android:textAllCaps="true"
            android:textColor="@color/colorTextSecondary"
            android:layout_marginBottom="2dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"/>

        <LinearLayout
            style="@style/HorizontalDividerBottom"
            android:layout_width="match_parent"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:layout_marginTop="4dp"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>