<?xml version="1.0" encoding="utf-8"?><!--
/**
 * Copyright (c) 2007, Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ToolbarBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblTitleAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@color/colorTextThirdy" />

    <LinearLayout
        style="@style/HorizontalDividerBottom"
        android:layout_width="match_parent" />


    <LinearLayout
        android:id="@+id/layoutEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:layout_weight="1">

            <!--ImageView
             android:id="@+id/bkgnd"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/bkgnd"-->

            <com.ecanaveras.gde.waudio.editor.WaveformView
                android:id="@+id/waveform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.ecanaveras.gde.waudio.editor.MarkerView
                android:id="@+id/startmarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start_marker"
                android:nextFocusDown="@+id/endmarker"
                android:src="@drawable/marker_left"
                android:visibility="gone" />

            <com.ecanaveras.gde.waudio.editor.MarkerView
                android:id="@+id/endmarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/end_marker"
                android:nextFocusDown="@+id/info"
                android:nextFocusUp="@+id/startmarker"
                android:src="@drawable/marker_right"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout
            style="@style/HorizontalDividerBottom"
            android:layout_width="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/info"
                style="@style/AudioFileInfoOverlayText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:nextFocusDown="@+id/play"
                android:nextFocusUp="@+id/endmarker"
                tools:ignore="Suspicious0dp" />
        </LinearLayout>

        <LinearLayout
            style="@style/ToolbarBackground"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/rew"
                style="@android:style/MediaButton"
                android:layout_width="64dip"
                android:layout_height="52dip"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="6dip"
                android:contentDescription="@string/rewind"
                android:src="@android:drawable/ic_media_previous" />

            <ImageButton
                android:id="@+id/play"
                style="@android:style/MediaButton"
                android:layout_width="71dip"
                android:layout_height="52dip"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="6dip"
                android:contentDescription="@string/play"
                android:src="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ffwd"
                style="@android:style/MediaButton"
                android:layout_width="64dip"
                android:layout_height="52dip"
                android:layout_marginBottom="6dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="6dip"
                android:contentDescription="@string/ffwd"
                android:src="@android:drawable/ic_media_next" />

        </LinearLayout>

        <LinearLayout
            style="@style/HorizontalDividerTop"
            android:layout_width="match_parent" />

        <LinearLayout
            style="@style/HorizontalDividerBottom"
            android:layout_width="match_parent" />

        <LinearLayout
            style="@style/ToolbarBackground"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mark_start"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:gravity="center"
                android:labelFor="@+id/starttext"
                android:text="@string/start_label"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/starttext"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="30dip"
                android:enabled="false"
                android:gravity="center"
                android:inputType="number|numberDecimal"
                android:textColor="#ffffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mark_end"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:gravity="center"
                android:labelFor="@+id/endtext"
                android:text="@string/end_label"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/endtext"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dip"
                android:enabled="false"
                android:gravity="center"
                android:inputType="number|numberDecimal"
                android:textColor="#ffffffff" />

        </LinearLayout>

        <LinearLayout
            style="@style/HorizontalDividerBottom"
            android:layout_width="match_parent" />

        <LinearLayout
            style="@style/ToolbarBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btnNext"
                style="@style/WaudioButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:onClick="onNext"
                android:text="SIGUIENTE" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
